<resources>
    <string name="app_name">Songle</string>
    <string name="help">"?"</string>
    <string name="level">Level 2</string>
    <string name="new_song">New Song</string>
    <string name="incomplete_songs">Incomplete songs:</string>
    <string name="incomplete_song">Song</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_activityerfd">Map</string>
    <string name="instructions">
    Move around the map and collect words by clicking on nearby markers.\n\nMarkers on the map have
...
