<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.android.songle.MainMenu"
    android:orientation="vertical">

    <!-- reused fragment -->
    <fragment
        android:id="@+id/top_bar_fragment"
        android:name="com.example.android.songle.TopBarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/new_song_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_rectangular_button"
                android:elevation="10dp"
                android:onClick="newSong"
                android:stateListAnimator="@null"
                android:text="@string/new_song"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:theme="@+style/PrimaryButton"
                app:layout_constraintBottom_toTopOf="@+id/statistics_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <Button
                android:id="@+id/statistics_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_rectangular_button"
                android:elevation="10dp"
                android:onClick="viewStatistics"
                android:stateListAnimator="@null"
                android:text="@string/statistics"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:theme="@+style/PrimaryButton"
                app:layout_constraintBottom_toTopOf="@+id/button_separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_song_button" />

            <View
                android:id="@+id/button_separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/incomplete_songs_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statistics_button" />

            <TextView
                android:id="@+id/incomplete_songs_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="18dp"
                android:text="Incomplete Songs"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/no_incomplete_songs_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_separator" />

            <TextView
                android:id="@+id/no_incomplete_songs_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="You have no incomplete songs."
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/songs_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/incomplete_songs_tv" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/songs_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/no_complete_songs_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/no_incomplete_songs_tv">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/no_complete_songs_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="You have no complete songs."
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/songs_list" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</LinearLayout>
