<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/incomplete_song_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:weightSum="100">

        <ProgressBar
            android:id="@+id/list_item_progress_bar"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:progress="53" />

        <Button
            android:id="@+id/list_item_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:paddingLeft="24dp"
            android:paddingTop="8dp"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_weight="99.99" />

        <Button
            android:id="@+id/list_item_give_up"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/circle_button"
            android:foreground="@drawable/give_up_icon"
            android:stateListAnimator="@null"
            android:theme="@style/PrimaryButton" />

    </LinearLayout>

</RelativeLayout>